--- a/Lexis-main/HTML/Cement.html
+++ b/Lexis-main/HTML/Cement.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agriculture | Lexis & Collins</title>
+    <title>Cement | Lexis & Collins</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../CSS/Agriculture.css">
+    <link rel="stylesheet" href="../CSS/Cement.css">
 </head>
 
 <body>
@@ -53,16 +53,16 @@
         <div class="service-container">
             <!-- Left Side: Image -->
             <div class="service-image">
-                <img src="../Practices Pics/Agriculture.png" alt="Agriculture">
+                <img src="../Practices Pics/Cement.png" alt="Cement">
             </div>
 
             <!-- Right Side: Service Box -->
             <div class="service-box">
                 <h2 class="service-heading">Related Industries</h2>
                 <div class="service-list">
-                    <a href="Anev.html" class="service-item active">Automotive and Electric Vehicles</a>
+                    <a href="Agriculture.html" class="service-item active">Agriculture, agrichemicals and fertilisers</a>
                     <span class="divider"></span>
-                    <a href="Chemicals.html" class="service-item">Chemicals</a>
+                    <a href="Automotive.html" class="service-item">Automotive and Electric Vehicles</a>
                     <span class="divider"></span>
                     <a href="Defense.html" class="service-item">Defence</a>
                     <span class="divider"></span>
@@ -71,7 +71,6 @@
                     <a href="Pnp.html" class="service-item">Paper and Packaging</a>
                     <span class="divider"></span>
                     <a href="Shipping.html" class="service-item">Shipping</a>
-                    <span class="divider"></span>
                 </div>
             </div>
         </div>
@@ -79,34 +78,35 @@
         <!-- Content Section -->
         <div class="content-section">
             <div class="content-container">
-                <h2 class="content-heading">Agriculture, Agrichemicals and Fertilizers</h2>
+                <h2 class="content-heading">Cement</h2>
 
                 <div class="content-text">
-                    <p>India’s agriculture sector remains the backbone of its economy, contributing significantly to GDP, employment, and global trade. With rapid technological transformation, increasing private sector participation, and evolving government policies, agribusiness has emerged as a high-growth industry. International investors, multinational corporations, and domestic stakeholders alike are exploring opportunities across food production, agritech, supply chain, agrichemicals, and fertilizers. At the same time, the sector is governed by a complex framework of regulations relating to land use, environmental standards, licensing, product approvals, trade restrictions, and intellectual property protection.</p>
+                    <p>The cement industry is a cornerstone of India’s infrastructure and real estate development, driving growth in housing, industrial construction, and large-scale infrastructure projects. As one of the largest producers and consumers of cement globally, India offers significant opportunities for domestic and international players in manufacturing, supply chain, technology, and green cement innovation. The sector, however, is highly regulated, energy-intensive, and subject to scrutiny under environmental, competition, and trade laws, making legal expertise essential for successful operations.</p>
 
-                    <p>Our Agriculture, Agrichemicals and Fertilizers Practice is uniquely positioned to advise clients across the entire value chain – from seed producers, agrochemical manufacturers, and fertilizer companies, to large-scale agribusinesses, commodity traders, and investors. We combine sector-specific knowledge with strong regulatory, transactional, and dispute resolution capabilities to deliver commercially sound legal solutions.</p>
+                    <p>Our Cement Practice brings together deep industry knowledge and multi-disciplinary legal capabilities to advise cement manufacturers, equipment suppliers, investors, real estate developers, contractors, and multinational corporations. We support clients on regulatory compliance, complex transactions, sustainability initiatives, and sector-specific disputes.</p>
 
                     <h2 class="subheading">Key Areas of Expertise:</h2>
                     <ul>
-                        <li><span class="expertise-title">Regulatory & Compliance:</span> Advising on laws and regulations governing seeds, pesticides, fertilizers, biotechnology, GMOs, food safety, and environmental standards, including compliance with the Fertiliser (Control) Order, Insecticides Act, and allied legislation.</li>
-                        <li><span class="expertise-title">Market Entry & Structuring:</span> Assisting global agrichemical and fertilizer companies in setting up operations in India, including foreign direct investment (FDI), joint ventures, licensing, and distribution arrangements.</li>
-                        <li><span class="expertise-title">Commercial Contracts:</span> Drafting and negotiating supply, distribution, dealership, and collaboration agreements tailored to the agriculture sector.</li>
-                        <li><span class="expertise-title">Environmental & Sustainability Advisory:</span> Guiding clients on ESG considerations, sustainable farming practices, carbon credits, and climate-linked obligations impacting agricultural enterprises.</li>
-                        <li><span class="expertise-title">Trade & Competition:</span> Advising on cross-border trade, import/export restrictions, WTO compliance, competition law issues, and anti-dumping disputes in agrichemicals and fertilizers.</li>
-                        <li><span class="expertise-title">Mergers & Acquisitions:</span> Structuring and executing M&A transactions, strategic alliances, and private equity investments in agribusiness and input manufacturing sectors.</li>
-                        <li><span class="expertise-title">Intellectual Property:</span> Protecting plant varieties, biotech innovations, proprietary formulations, trademarks, and patents in agrichemicals and fertilizers.</li>
-                        <li><span class="expertise-title">Dispute Resolution:</span> Representing clients in sector-specific disputes, regulatory challenges, commercial arbitrations, and litigation across India.</li>
+                        <li><span class="expertise-title">Regulatory & Compliance:</span> Advising on the Mines and Minerals (Development and Regulation) Act, environmental clearances, pollution control norms, and state-specific industrial policies impacting cement production and distribution.</li>
+                        <li><span class="expertise-title">M&A and Investments:</span> Structuring and executing mergers, acquisitions, joint ventures, private equity, and foreign direct investment in cement companies and allied businesses.</li>
+                        <li><span class="expertise-title">Commercial & Supply Contracts:</span> Drafting and negotiating contracts for raw material supply (limestone, coal, fly ash), equipment procurement, EPC agreements, and distribution arrangements.</li>
+                        <li><span class="expertise-title">Infrastructure & Project Development:</span> Supporting cement manufacturers and investors in setting up new plants, expansion projects, and integrated facilities, including land acquisition, power supply, and logistics</li>
+                        <li><span class="expertise-title">ESG & Sustainability:</span> Advising on decarbonization, energy efficiency, green cement, waste-to-energy projects, carbon credits, and ESG-linked financing.</li>
+                        <li><span class="expertise-title">Competition & Antitrust:</span> Representing clients in cartel investigations, pricing disputes, and compliance with the Competition Act.</li>
+                        <li><span class="expertise-title">Trade & Customs:</span> Advising on import/export regulations, anti-dumping investigations, and WTO compliance for cement and clinker trade.</li>
+                        <li><span class="expertise-title">Dispute Resolution:</span> Representing clients in commercial disputes, construction arbitration, supply chain litigation, and regulatory challenges.</li>
+                        <li><span class="expertise-title">Technology & Innovation:</span> Assisting on IP protection, licensing, and collaborations related to green cement technologies, AI-driven manufacturing, and digital supply chain solutions.</li>
                     </ul>
                 </div>
                 <h2 class="subheading">Why Choose Us?</h2>
                 <div class="content-text">
-                <p>Our team of experienced professionals is committed to delivering high-quality legal services to our clients. We understand the complexities of the agricultural sector and are dedicated to helping our clients navigate the challenges and opportunities of this dynamic industry.</p>
+                <p>With India’s ambitious infrastructure pipeline and focus on sustainable construction, our Cement Practice is strategically positioned to advise global and domestic stakeholders in navigating opportunities and challenges in this vital sector. We collaborate seamlessly with our infrastructure, real estate, ESG, energy, mining, and disputes practices to deliver comprehensive, sector-specific legal solutions.</p>
                 </div>
             </div>
         </div>
         
 
-         <!-- Footer Image -->
+        <!-- Footer Image -->
        
     </main>
 
@@ -151,7 +151,6 @@
         });
     </script>
     <script src="../JS/dropdown.js"></script>
-    <script src="../JS/news.js"></script>
 </body>
 
 </html>
