--- a/Lexis-main/HTML/Chemical.html
+++ b/Lexis-main/HTML/Chemical.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Defence | Lexis & Collins</title>
+    <title>Chemical | Lexis & Collins</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../CSS/Defence.css">
+    <link rel="stylesheet" href="../CSS/Chemical.css">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
         <div class="service-container">
             <!-- Left Side: Image -->
             <div class="service-image">
-                <img src="../Practices Pics/Defence.png" alt="Defence">
+                <img src="../Practices Pics/Chemicals.png" alt="Chemical">
             </div>
 
             <!-- Right Side: Service Box -->
@@ -63,8 +63,6 @@
                     <a href="Agriculture.html" class="service-item active">Agriculture, agrichemicals and fertilisers</a>
                     <span class="divider"></span>
                     <a href="Automotive.html" class="service-item">Automotive and Electric Vehicles</a>
-                    <span class="divider"></span>
-                    <a href="Defence.html" class="service-item">Defence</a>
                     <span class="divider"></span>
                     <a href="Mining-and-metals.html" class="service-item">Mining and Metals</a>
                     <span class="divider"></span>
@@ -79,33 +77,35 @@
         <!-- Content Section -->
         <div class="content-section">
             <div class="content-container">
-                <h2 class="content-heading">Defence</h2>
+                <h2 class="content-heading">Chemical</h2>
 
                 <div class="content-text">
-                    <p>India has one of the world’s largest defence markets, with increasing focus on indigenization, modernization of armed forces, and private sector participation through the “Make in India” and “Atmanirbhar Bharat” initiatives. The Defence Acquisition Procedure (DAP), liberalized FDI norms, and Production Linked Incentive (PLI) schemes are transforming the sector into a global manufacturing and innovation hub. At the same time, defence projects involve complex regulatory frameworks, sensitive national security considerations, and multi-jurisdictional collaborations.</p>
+                    <p>India’s chemicals industry is one of the largest in the world, spanning petrochemicals, specialty chemicals, agrochemicals, polymers, dyes, and performance materials. With strong domestic demand, global supply chain realignments, and government initiatives such as the Production Linked Incentive (PLI) scheme, the sector is poised for robust growth. However, the industry also operates under a stringent regulatory environment covering environmental standards, hazardous substances, worker safety, trade controls, and intellectual property rights.</p>
 
-                    <p>Our Defence Practice advises multinational defence contractors, Indian manufacturers, technology providers, investors, and start-ups on legal, regulatory, and strategic issues across the defence and aerospace value chain. We combine deep sector knowledge with cross-border expertise to support clients in navigating one of the most highly regulated and strategically important industries.</p>
+                    <p>Our Chemicals Practice brings together deep sector expertise and multidisciplinary legal capabilities to advise multinational corporations, domestic manufacturers, distributors, and investors. We assist clients across the value chain – from large integrated chemical producers to specialty chemical innovators – on regulatory, transactional, and dispute-related matters.</p>
 
                     <h2 class="subheading">Key Areas of Expertise:</h2>
                     <ul>
-                        <li><span class="expertise-title">Regulatory & Compliance:</span> Advising on compliance with the Defence Acquisition Procedure (DAP), licensing under the Industries (Development & Regulation) Act, FDI policies, offset obligations, and national security regulations.</li>
-                        <li><span class="expertise-title">Defence Contracts & Procurement:</span> Assisting in bidding for government tenders, public procurement processes, offset agreements, joint ventures, and transfer-of-technology contracts.</li>
-                        <li><span class="expertise-title">M&A and Strategic Transactions:</span> Structuring mergers, acquisitions, foreign direct investment, and joint ventures in defence manufacturing and services.</li>
-                        <li><span class="expertise-title">Technology Transfer & Collaborations:</span> Advising on licensing, joint R&D agreements, offset arrangements, and intellectual property rights in defence technologies.</li>
-                        <li><span class="expertise-title">Aerospace & Dual-Use Technologies:</span> Supporting clients on aerospace projects, UAVs/drones, cyber defence solutions, and compliance with dual-use export control laws.</li>
-                        <li><span class="expertise-title">Dispute Resolution:</span> Representing clients in contract enforcement, regulatory challenges, procurement disputes, and international arbitration.</li>
-                        <li><span class="expertise-title">ESG & Sustainability:</span> Guiding on green manufacturing in defence, compliance with ESG-linked financing, and sustainable technology practices.</li>
-                        <li><span class="expertise-title">Export Control & Trade Compliance:</span> Advising on international trade restrictions, sanctions, export licensing, and WTO compliance for defence and dual-use goods.</li>
-                        <li><span class="expertise-title">Security Clearances & Confidentiality:</span> Assisting clients with security clearance requirements, handling sensitive data, and compliance with classified information protocols.</li>
+                        <li><span class="expertise-title">Regulatory & Compliance:</span> Advising on compliance with the Chemicals (Management and Safety) Rules, Environmental Protection Act, Hazardous Waste Rules, Manufacture, Storage and Import of Hazardous Chemicals Rules (MSIHC), and other central and state regulations.</li>
+                        <li><span class="expertise-title">ESG & Sustainability:</span> Supporting clients in carbon reduction, green chemistry initiatives, ESG-linked financing, and compliance with climate change and sustainability frameworks.</li>
+                        <li><span class="expertise-title">Commercial & Supply Contracts:</span> Drafting and negotiating agreements for raw material supply, distribution, technology licensing, toll manufacturing, and joint R&D collaborations.</li>
+                        <li><span class="expertise-title">Foreign Investment & Market Entry:</span> Assisting global chemical majors with foreign direct investment (FDI), joint ventures, technology transfers, and structuring of Indian operations.</li>
+                        <li><span class="expertise-title">M&A and Strategic Transactions:</span> Advising on mergers, acquisitions, divestments, and private equity investments in chemical companies, including due diligence and structuring.</li>
+                        <li><span class="expertise-title">Trade & Customs:</span> Advising on import/export restrictions, anti-dumping investigations, customs classifications, and WTO compliance in the global chemicals trade.</li>
+                        <li><span class="expertise-title">Intellectual Property:</span> Protecting proprietary formulations, patents, process technologies, and trademarks, including enforcement strategies for chemical innovations.</li>
+                        <li><span class="expertise-title">Health, Safety & Environmental Matters:</span> Assisting with compliance on occupational health and safety standards, hazardous material handling, chemical accident rules, and liability under environmental law.</li>
+                        <li><span class="expertise-title">Dispute Resolution:</span> Representing clients in commercial, contractual, regulatory, and environmental disputes before courts, tribunals, and arbitral forums.</li>
+                        <li><span class="expertise-title">Technology & Innovation:</span> Advising on digital transformation in chemical manufacturing, AI-driven process optimization, and collaborations in sustainable and specialty chemicals.</li>
                     </ul>
                 </div>
                 <h2 class="subheading">Why Choose Us?</h2>
                 <div class="content-text">
-                <p>With India opening its defence sector to greater private and foreign participation, our practice is uniquely positioned to help clients navigate regulatory complexities, structure strategic collaborations, and resolve disputes. By leveraging our expertise across government contracts, trade, ESG, technology, and dispute resolution, we provide comprehensive legal solutions in one of the most sensitive and strategically significant industries.</p>
+                <p>With India emerging as a global hub for specialty and performance chemicals, our Chemicals Practice is uniquely positioned to guide clients through regulatory challenges, strategic investments, and sustainability transitions. By integrating expertise from our environment, ESG, trade, competition, technology, and disputes practices, we deliver holistic legal solutions tailored to the needs of the chemical sector.</p>
                 </div>
             </div>
         </div>
         
+
         <!-- Footer Image -->
        
     </main>
