--- a/Lexis-main/HTML/Automotive.html
+++ b/Lexis-main/HTML/Automotive.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Defence | Lexis & Collins</title>
+    <title>Automotive and Electric Vehicles | Lexis & Collins</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../CSS/Defence.css">
+    <link rel="stylesheet" href="../CSS/Automotive.css">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
         <div class="service-container">
             <!-- Left Side: Image -->
             <div class="service-image">
-                <img src="../Practices Pics/Defence.png" alt="Defence">
+                <img src="../Practices Pics/Automotive.png" alt="Automotive Service">
             </div>
 
             <!-- Right Side: Service Box -->
@@ -62,9 +62,9 @@
                 <div class="service-list">
                     <a href="Agriculture.html" class="service-item active">Agriculture, agrichemicals and fertilisers</a>
                     <span class="divider"></span>
-                    <a href="Automotive.html" class="service-item">Automotive and Electric Vehicles</a>
+                    <a href="Chemicals.html" class="service-item">Chemicals</a>
                     <span class="divider"></span>
-                    <a href="Defence.html" class="service-item">Defence</a>
+                    <a href="Defense.html" class="service-item">Defense</a>
                     <span class="divider"></span>
                     <a href="Mining-and-metals.html" class="service-item">Mining and Metals</a>
                     <span class="divider"></span>
@@ -79,34 +79,35 @@
         <!-- Content Section -->
         <div class="content-section">
             <div class="content-container">
-                <h2 class="content-heading">Defence</h2>
+                <h2 class="content-heading">Automotive and Electric Vehicles Practice</h2>
 
                 <div class="content-text">
-                    <p>India has one of the world’s largest defence markets, with increasing focus on indigenization, modernization of armed forces, and private sector participation through the “Make in India” and “Atmanirbhar Bharat” initiatives. The Defence Acquisition Procedure (DAP), liberalized FDI norms, and Production Linked Incentive (PLI) schemes are transforming the sector into a global manufacturing and innovation hub. At the same time, defence projects involve complex regulatory frameworks, sensitive national security considerations, and multi-jurisdictional collaborations.</p>
+                    <p>India is one of the world’s largest automotive markets and is rapidly transforming into a global hub for electric mobility and advanced automotive technologies. With the Government’s strong policy push through FAME II, Production Linked Incentive (PLI) schemes, and state-level EV policies, along with increasing global investment in sustainable transportation, the automotive and EV sector is undergoing a paradigm shift. This transformation is creating opportunities across manufacturing, R&D, battery technology, charging infrastructure, and mobility-as-a-service, while also presenting unique legal, regulatory, and commercial challenges.</p>
 
-                    <p>Our Defence Practice advises multinational defence contractors, Indian manufacturers, technology providers, investors, and start-ups on legal, regulatory, and strategic issues across the defence and aerospace value chain. We combine deep sector knowledge with cross-border expertise to support clients in navigating one of the most highly regulated and strategically important industries.</p>
+                    <p>Our Automotive and Electric Vehicles Practice supports multinational manufacturers, suppliers, technology providers, investors, start-ups, and mobility service providers across the automotive and EV value chain. We combine deep sectoral knowledge with cross-disciplinary expertise to deliver comprehensive legal and strategic solutions in this evolving landscape.</p>
 
                     <h2 class="subheading">Key Areas of Expertise:</h2>
                     <ul>
-                        <li><span class="expertise-title">Regulatory & Compliance:</span> Advising on compliance with the Defence Acquisition Procedure (DAP), licensing under the Industries (Development & Regulation) Act, FDI policies, offset obligations, and national security regulations.</li>
-                        <li><span class="expertise-title">Defence Contracts & Procurement:</span> Assisting in bidding for government tenders, public procurement processes, offset agreements, joint ventures, and transfer-of-technology contracts.</li>
-                        <li><span class="expertise-title">M&A and Strategic Transactions:</span> Structuring mergers, acquisitions, foreign direct investment, and joint ventures in defence manufacturing and services.</li>
-                        <li><span class="expertise-title">Technology Transfer & Collaborations:</span> Advising on licensing, joint R&D agreements, offset arrangements, and intellectual property rights in defence technologies.</li>
-                        <li><span class="expertise-title">Aerospace & Dual-Use Technologies:</span> Supporting clients on aerospace projects, UAVs/drones, cyber defence solutions, and compliance with dual-use export control laws.</li>
-                        <li><span class="expertise-title">Dispute Resolution:</span> Representing clients in contract enforcement, regulatory challenges, procurement disputes, and international arbitration.</li>
-                        <li><span class="expertise-title">ESG & Sustainability:</span> Guiding on green manufacturing in defence, compliance with ESG-linked financing, and sustainable technology practices.</li>
-                        <li><span class="expertise-title">Export Control & Trade Compliance:</span> Advising on international trade restrictions, sanctions, export licensing, and WTO compliance for defence and dual-use goods.</li>
-                        <li><span class="expertise-title">Security Clearances & Confidentiality:</span> Assisting clients with security clearance requirements, handling sensitive data, and compliance with classified information protocols.</li>
+                        <li><span class="expertise-title">Regulatory & Compliance:</span> Advising on Motor Vehicles Act, CMVR, environmental standards, homologation, safety certifications, and state EV policies, along with global automotive and battery compliance frameworks.</li>
+                        <li><span class="expertise-title">Foreign Investment & Market Entry:</span> Assisting global OEMs, EV start-ups, and component manufacturers with foreign direct investment (FDI), joint ventures, strategic alliances, and licensing arrangements in India.</li>
+                        <li><span class="expertise-title">Contracts & Commercial Advisory:</span> Drafting and negotiating supply, distribution, dealership, franchising, charging infrastructure agreements, and technology licensing contracts.</li>
+                        <li><span class="expertise-title">Electric Mobility & Infrastructure:</span> Advising on charging station projects, battery-swapping models, energy storage solutions, and collaborations between automotive, power, and infrastructure players.</li>
+                        <li><span class="expertise-title">Technology & IP:</span> Protecting innovations in connected vehicles, autonomous driving systems, telematics, EV batteries, and charging technologies through patents, trade secrets, and licensing frameworks.</li>
+                        <li><span class="expertise-title">M&A and Strategic Transactions:</span> Guiding clients on mergers, acquisitions, private equity, and venture capital investments in automotive and EV companies, including start-up financing.</li>
+                        <li><span class="expertise-title">ESG & Sustainability:</span> Advising on green mobility, carbon credits, sustainable supply chains, and compliance with India’s and international ESG norms in the automotive sector.</li>
+                        <li><span class="expertise-title">Dispute Resolution:</span> Representing clients in disputes relating to supply contracts, regulatory enforcement, product liability, and cross-border litigation.</li>
+                        <li><span class="expertise-title">Competition & Trade:</span> Advising on anti-trust issues, import/export regulations, customs duties, and WTO-linked trade matters affecting automotive and EV components.</li>
                     </ul>
                 </div>
                 <h2 class="subheading">Why Choose Us?</h2>
                 <div class="content-text">
-                <p>With India opening its defence sector to greater private and foreign participation, our practice is uniquely positioned to help clients navigate regulatory complexities, structure strategic collaborations, and resolve disputes. By leveraging our expertise across government contracts, trade, ESG, technology, and dispute resolution, we provide comprehensive legal solutions in one of the most sensitive and strategically significant industries.</p>
+                <p>With India positioned as both a manufacturing hub and a rapidly expanding consumer market for EVs, our practice is uniquely equipped to bridge the needs of global and domestic stakeholders. By integrating expertise from infrastructure, energy, technology, intellectual property, ESG, and finance practices, we deliver end-to-end legal solutions that help clients capitalize on opportunities in the automotive and electric mobility revolution.</p>
                 </div>
             </div>
         </div>
         
-        <!-- Footer Image -->
+
+          <!-- Footer Image -->
        
     </main>
 
