--- a/Lexis-main/HTML/Consumer.html
+++ b/Lexis-main/HTML/Consumer.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Defence | Lexis & Collins</title>
+    <title>Consumer Products | Lexis & Collins</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../CSS/Defence.css">
+    <link rel="stylesheet" href="../CSS/Consumer.css">
 </head>
 
 <body>
@@ -53,24 +53,20 @@
         <div class="service-container">
             <!-- Left Side: Image -->
             <div class="service-image">
-                <img src="../Practices Pics/Defence.png" alt="Defence">
+                <img src="../Practices Pics/Consumer.png" alt="Consumer">
             </div>
 
             <!-- Right Side: Service Box -->
             <div class="service-box">
                 <h2 class="service-heading">Related Industries</h2>
                 <div class="service-list">
-                    <a href="Agriculture.html" class="service-item active">Agriculture, agrichemicals and fertilisers</a>
+                    <a href="Education.html" class="service-item active">Education</a>
                     <span class="divider"></span>
-                    <a href="Automotive.html" class="service-item">Automotive and Electric Vehicles</a>
+                    <a href="Food.html" class="service-item">Food & Beverages</a>
                     <span class="divider"></span>
-                    <a href="Defence.html" class="service-item">Defence</a>
+                    <a href="Hospitality.html" class="service-item">Hospitality and Services</a>
                     <span class="divider"></span>
-                    <a href="Mining-and-metals.html" class="service-item">Mining and Metals</a>
-                    <span class="divider"></span>
-                    <a href="Pnp.html" class="service-item">Paper and Packaging</a>
-                    <span class="divider"></span>
-                    <a href="Shipping.html" class="service-item">Shipping</a>
+                    <a href="Retail.html" class="service-item">Retail, Wholesale and Distribution</a>
                     <span class="divider"></span>
                 </div>
             </div>
@@ -79,33 +75,34 @@
         <!-- Content Section -->
         <div class="content-section">
             <div class="content-container">
-                <h2 class="content-heading">Defence</h2>
+                <h2 class="content-heading">Consumer Products</h2>
 
                 <div class="content-text">
-                    <p>India has one of the world’s largest defence markets, with increasing focus on indigenization, modernization of armed forces, and private sector participation through the “Make in India” and “Atmanirbhar Bharat” initiatives. The Defence Acquisition Procedure (DAP), liberalized FDI norms, and Production Linked Incentive (PLI) schemes are transforming the sector into a global manufacturing and innovation hub. At the same time, defence projects involve complex regulatory frameworks, sensitive national security considerations, and multi-jurisdictional collaborations.</p>
+                    <p>India’s consumer products sector is one of the fastest-growing in the world, driven by rising disposable incomes, urbanization, digital adoption, and a rapidly expanding middle class. Global and domestic companies are scaling their presence across fast-moving consumer goods (FMCG), retail, luxury, lifestyle, electronics, health & wellness, and e-commerce. However, the sector is governed by a complex legal landscape spanning consumer protection, product liability, advertising, labeling, environmental compliance, and digital commerce regulations.</p>
 
-                    <p>Our Defence Practice advises multinational defence contractors, Indian manufacturers, technology providers, investors, and start-ups on legal, regulatory, and strategic issues across the defence and aerospace value chain. We combine deep sector knowledge with cross-border expertise to support clients in navigating one of the most highly regulated and strategically important industries.</p>
+                    <p>Our Consumer Products Practice advises multinational corporations, domestic enterprises, start-ups, and investors on the full spectrum of legal and regulatory issues impacting the consumer goods value chain. We deliver sector-specific, business-focused advice to help clients build sustainable brands and navigate India’s evolving consumer markets.</p>
 
                     <h2 class="subheading">Key Areas of Expertise:</h2>
                     <ul>
-                        <li><span class="expertise-title">Regulatory & Compliance:</span> Advising on compliance with the Defence Acquisition Procedure (DAP), licensing under the Industries (Development & Regulation) Act, FDI policies, offset obligations, and national security regulations.</li>
-                        <li><span class="expertise-title">Defence Contracts & Procurement:</span> Assisting in bidding for government tenders, public procurement processes, offset agreements, joint ventures, and transfer-of-technology contracts.</li>
-                        <li><span class="expertise-title">M&A and Strategic Transactions:</span> Structuring mergers, acquisitions, foreign direct investment, and joint ventures in defence manufacturing and services.</li>
-                        <li><span class="expertise-title">Technology Transfer & Collaborations:</span> Advising on licensing, joint R&D agreements, offset arrangements, and intellectual property rights in defence technologies.</li>
-                        <li><span class="expertise-title">Aerospace & Dual-Use Technologies:</span> Supporting clients on aerospace projects, UAVs/drones, cyber defence solutions, and compliance with dual-use export control laws.</li>
-                        <li><span class="expertise-title">Dispute Resolution:</span> Representing clients in contract enforcement, regulatory challenges, procurement disputes, and international arbitration.</li>
-                        <li><span class="expertise-title">ESG & Sustainability:</span> Guiding on green manufacturing in defence, compliance with ESG-linked financing, and sustainable technology practices.</li>
-                        <li><span class="expertise-title">Export Control & Trade Compliance:</span> Advising on international trade restrictions, sanctions, export licensing, and WTO compliance for defence and dual-use goods.</li>
-                        <li><span class="expertise-title">Security Clearances & Confidentiality:</span> Assisting clients with security clearance requirements, handling sensitive data, and compliance with classified information protocols.</li>
+                        <li><span class="expertise-title">Regulatory & Compliance:</span> Advising on laws governing product standards, labeling, advertising, packaging, and safety under the Consumer Protection Act, Legal Metrology Act, Drugs & Cosmetics Act, and Food Safety & Standards Act (FSSA).</li>
+                        <li><span class="expertise-title">Product Liability & Consumer Disputes:</span> Representing clients in consumer forums, product recall matters, warranty claims, and liability disputes relating to defective goods.</li>
+                        <li><span class="expertise-title">Commercial & Distribution Contracts:</span> Drafting and negotiating supply chain, distribution, dealership, retail, and franchising agreements.</li>
+                        <li><span class="expertise-title">Digital Commerce & Technology:</span> Advising on e-commerce regulations, digital marketplaces, data protection, online advertising, influencer marketing, and consumer-facing technology platforms.</li>
+                        <li><span class="expertise-title">M&A and Strategic Transactions:</span> Assisting in acquisitions, joint ventures, brand licensing, and private equity investments in consumer product companies.</li>
+                        <li><span class="expertise-title">Intellectual Property & Branding:</span> Protecting trademarks, designs, copyrights, trade dress, and enforcement of brand rights across physical and digital markets.</li>
+                        <li><span class="expertise-title">Competition & Trade:</span> Advising on pricing practices, restrictive trade arrangements, competition law risks, and cross-border trade and customs regulations.</li>
+                        <li><span class="expertise-title">ESG & Sustainability:</span> Guiding clients on sustainable packaging, plastic waste management, green product labeling, and ESG-driven consumer disclosures.</li>
+                        <li><span class="expertise-title">Dispute Resolution:</span> Representing clients in commercial disputes, contractual claims, regulatory actions, and arbitration involving consumer product businesses.</li>
                     </ul>
                 </div>
                 <h2 class="subheading">Why Choose Us?</h2>
                 <div class="content-text">
-                <p>With India opening its defence sector to greater private and foreign participation, our practice is uniquely positioned to help clients navigate regulatory complexities, structure strategic collaborations, and resolve disputes. By leveraging our expertise across government contracts, trade, ESG, technology, and dispute resolution, we provide comprehensive legal solutions in one of the most sensitive and strategically significant industries.</p>
+                <p>With India’s consumer sector rapidly expanding and increasingly regulated, our practice provides end-to-end legal support for companies building resilient and compliant businesses. Leveraging expertise across retail, e-commerce, intellectual property, ESG, competition, and disputes, we are well-positioned to advise global and domestic brands in navigating India’s dynamic consumer landscape.</p>
                 </div>
             </div>
         </div>
         
+
         <!-- Footer Image -->
        
     </main>
